Lab1_assignment/weak_1_54192391.err
sum.c: In function ‘main’:
sum.c:127:44: error: implicit declaration of function ‘ceil’ [-Wimplicit-function-declaration]
  127 |     unsigned int max_distance = 1 << ((int)ceil(log2(numprocs)));
      |                                            ^~~~
sum.c:4:1: note: include ‘<math.h>’ or provide a declaration of ‘ceil’
    3 | #include <stdlib.h>
  +++ |+#include <math.h>
    4 | 
sum.c:127:44: warning: incompatible implicit declaration of built-in function ‘ceil’ [-Wbuiltin-declaration-mismatch]
  127 |     unsigned int max_distance = 1 << ((int)ceil(log2(numprocs)));
      |                                            ^~~~
sum.c:127:44: note: include ‘<math.h>’ or provide a declaration of ‘ceil’
sum.c:127:49: error: implicit declaration of function ‘log2’ [-Wimplicit-function-declaration]
  127 |     unsigned int max_distance = 1 << ((int)ceil(log2(numprocs)));
      |                                                 ^~~~
sum.c:127:49: note: include ‘<math.h>’ or provide a declaration of ‘log2’
sum.c:127:49: warning: incompatible implicit declaration of built-in function ‘log2’ [-Wbuiltin-declaration-mismatch]
sum.c:127:49: note: include ‘<math.h>’ or provide a declaration of ‘log2’
make: *** [sum] Error 1
